Hugo: fix header--wide height on tablet sized screens
- Adjust header height
- More spacing above docs when header--wide

For https://linear.app/usmedia/issue/CUE-203

--- a/hugo/assets/scss/components/header.scss
+++ b/hugo/assets/scss/components/header.scss
@@ -179,6 +179,11 @@
                 }
             }
         }
+
+        &--wide {
+            --header-height: #{ $h-header--sticky };
+            --header-logo-width: #{ $w-branding--large };
+        }
     }
 
     @include screen($screen-normal) {
